--- a/EasyLearn/UI/Pages/UsersPage.xaml
+++ b/EasyLearn/UI/Pages/UsersPage.xaml
@@ -24,6 +24,65 @@
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
 
+            <Button Visibility="Collapsed"
+                    Name="openDeleteUserWindowButton"
+                    Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
+                <Button.CommandParameter>
+
+                    <Grid Margin="0 10 0 12">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Margin="24 0 24 0" 
+                                   Style="{DynamicResource MaterialDesignBody1TextBlock}" 
+                                   Text="Удалить пользователя?" 
+                                   VerticalAlignment="Center" 
+                                   HorizontalAlignment="Center"/>
+
+                        <Grid Grid.Row="2"
+                              Margin="14 12 14 0"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center">
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+
+                            <!--Кнопка отмены-->
+                            <Button Style="{DynamicResource EasyCancelButton}"
+                                    Width="75"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+
+                                <TextBlock Text="Нет" FontSize="14" FontFamily="Arial"/>
+                            </Button>
+
+                            <!--Кнопка подтверждения-->
+                            <Button Style="{DynamicResource EasyConfirmButton}"
+                                    Grid.Column="1"
+                                    Width="75">
+
+                                <TextBlock Text="Да" FontSize="14" FontFamily="Arial"/>
+
+                                <!--Действия кнопки при её нажатии-->
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding DeleteUserCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </Button>
+
+                        </Grid>
+
+                    </Grid>
+
+                </Button.CommandParameter>
+            </Button>
+
             <Button Name="openNewUserAddingWindowButton"
                     Visibility="Collapsed"
                     Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
@@ -63,7 +122,7 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            
+
                             <!--Кнопка отмены добавления нового аккаунта-->
                             <Button Style="{DynamicResource EasyCancelButton}"
                                     Grid.Column="0"
